Fixed bug when clearing and shifting completed rows

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ aside {
 }
 
 
-.asideShapes {
+.headerShapes {
     display:grid;
     grid-template-columns: 10px 10px 10px 10px;
     grid-template-rows: 10px 10px;
